# mempalace-sync

./: .gitignore  LICENSE  README.md  pyproject.toml
claude-skill/.claude/skills/memsync/: SKILL.md
docs/: ARCHITECTURE.md  RUNBOOK_4060.md  VISION.md
scripts/: install-skill.sh
src/mempalace_sync/: __init__.py  cli.py  config.py  git_backend.py  hook.py  host_server.py  mcp_server.py  nyxid_backend.py  paths.py
tests/: test_git_backend.py  test_paths.py
